fix auto-advance on mobiles, actually copy login loading template to webapp

--- a/_front-end/src/assets/toolkit/styles/components/_review-quiz.scss
+++ b/_front-end/src/assets/toolkit/styles/components/_review-quiz.scss
@@ -69,22 +69,19 @@
       &.-marked {
         color: $white;
         text-shadow: $shadow-text-thin;
-        + .submitwrap .icon {
+
+        + .submit .icon {
           color: $white;
           text-shadow: $shadow-text-thin;
         }
-
-        &::-webkit-input-placeholder { color: $white; }
-        &::-moz-placeholder { color: $white;  }
-        &:-ms-input-placeholder { color: $white; }
-        &:placeholder-shown { color: $white; }
       }
 
       &.-invalid {
         background-color: $yellow;
         color: $grey-dark;
         text-shadow: none;
-        + .submitwrap .icon {
+
+        + .submit .icon {
           color: $grey-dark;
           text-shadow: none;
         }
@@ -99,13 +96,18 @@
       }
     }
 
+    .answer.-marked::-webkit-input-placeholder { color: $white; }
+    .answer.-marked::-moz-placeholder { color: $white;  }
+    .answer.-marked:-ms-input-placeholder { color: $white; }
+    .answer.-marked:placeholder-shown { color: $white; }
+
     .submitwrap,
     .streak {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-content: center;
-      padding: 0 .75em;
+      margin: 0 .75em;
 
       .icon {
         font-size: responsive 20px 36px;
@@ -133,6 +135,11 @@
       border: 0;
       border-radius: 0;
       box-shadow: none;
+      &:focus {
+        .submitwrap {
+          outline: 1px dashed $grey-light;
+        }
+      }
     }
   }
 }
